# get rid of that stupid cache mechanism
rm -f config.cache

AC_INIT(mapgenerator, 0.1.0, olofsj@gmail.com)
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(configure.in)
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE(1.6 dist-bzip2)
AM_CONFIG_HEADER(config.h)

AC_C_BIGENDIAN
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST

AC_PROG_LIBTOOL

AC_OUTPUT([
Makefile
src/Makefile
src/bin/Makefile
])
